Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14480

Setting specific OST's under pool failed with error message "invalid argument"

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      the Error appears if the specific OST is not in the pool. at the same time, only the first OST is checked.

      the regular setstripe and overstripe's -C option works fine and the same way - they allocate OSTs within the given pool starting with the -i first OST. if the starting index is out of the pool, it is always enough to check only the first ost index in lod_qos_parse_config() ->lod_check_index_in_pool()

      however the -o option gives a new opportunity to list all the OSTs we want to place stripes to. and checking only the 1st index is not enough - as the result we may get an error or succeed depending on the 1st index only.

      [root@vm71 wc-main]# mkdir /mnt/lustre/d1
      [root@vm71 wc-main]# ./lustre/utils/lctl pool_new lustre.lala
      ./lustre/utils/lctl pool_new lustre.kaka
      Pool lustre.lala created
      [root@vm71 wc-main]# ./lustre/utils/lctl pool_new lustre.kaka
      Pool lustre.kaka created
      [root@vm71 wc-main]# ./lustre/utils/lctl pool_add lustre.lala lustre-OST[0]
      ./lustre/utils/lctl pool_add lustre.kaka lustre-OST[1]
      OST lustre-OST0000_UUID added to pool lustre.lala
      [root@vm71 wc-main]# ./lustre/utils/lctl pool_add lustre.kaka lustre-OST[1]
      OST lustre-OST0001_UUID added to pool lustre.kaka
      [root@vm71 wc-main]# ./lustre/utils/lfs setstripe --pool lustre.lala /mnt/lustre/d1/
      [root@vm71 wc-main]# ./lustre/utils/lfs setstripe -o 1,0 /mnt/lustre/d1/file2
      lt-lfs setstripe: setstripe error for '/mnt/lustre/d1/file2': Invalid argument
      [root@vm71 wc-main]# ./lustre/utils/lfs setstripe -o 0,1 /mnt/lustre/d1/file2

      the given OST list should have a priority over the pool.

            vitaly_fertman Vitaly Fertman
            vitaly_fertman Vitaly Fertman
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: